--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.11.2",
+    "cssnano": "^3.5.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.2",
     "gulp-postcss": "^6.1.0",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-sourcemaps": "^1.6.0",
+    "precss": "^1.4.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
