--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "gulpfile.js",
   "dependencies": {},
   "devDependencies": {
+    "basscss": "^8.0.1",
     "browser-sync": "^2.11.2",
     "cssnano": "^3.5.2",
     "gulp": "^3.9.1",
@@ -12,6 +13,8 @@
     "gulp-clean": "^0.3.2",
     "gulp-postcss": "^6.1.0",
     "gulp-sourcemaps": "^1.6.0",
+    "postcss-cssnext": "^2.5.1",
+    "postcss-import": "^8.0.2",
     "precss": "^1.4.0"
   },
   "scripts": {
